copy fix / collapsible shadow dark mode adjustments

--- a/apps/docs/app/tokens.css
+++ b/apps/docs/app/tokens.css
@@ -107,6 +107,7 @@
     --hd-color-surface-neutral-gradient-hover: linear-gradient(0deg, #353434 0%, #151515 100%);
     --hd-focus-ring: 0 0 0 0.125rem var(--hd-neutral-20), 0 0 0 0.25rem var(--hd-neutral-900);
     --hd-color-shadow-neutral-gradient: 0 0.0625 0 0 rgb(255 255 255 / 15%) inset, 0 0 0 0.0625 rgb(11 11 11 / 60%) inset;
+    --hd-color-shadow-collapsible: 0 0.25rem 0.625rem 0.25rem rgb(60 60 60 / 8%);
     --hd-color-dotted-surface: var(--hd-neutral-50);
     --hd-scrollbar-color: #eaeaea;
 }
@@ -157,5 +158,6 @@
     --hd-color-surface-neutral-gradient-hover: linear-gradient(0deg, var(--hd-neutral-0) 0%, #F4F3EE 100%);
     --hd-focus-ring: 0 0 0 0.125rem var(--hd-neutral-800), 0 0 0 0.25rem var(--hd-neutral-20);
     --hd-color-shadow-neutral-gradient: 0 0.0625 0 0 rgb(245 245 245 / 50%) inset, 0 0 0 0.0625 rgb(0 0 0 / 10%) inset;
+    --hd-color-shadow-collapsible: 0 0.25rem 0.625rem 0.25rem rgb(245 245 245 / 5%);
     --hd-color-dotted-surface: var(--hd-neutral-800);
 }
